overflow text fix

--- a/src/components/product-list/product-list.css
+++ b/src/components/product-list/product-list.css
@@ -65,6 +65,8 @@
     font-size: 14px;
     line-height: 150%;
     color: #000000;
+    display: flex;
+    word-break: break-word;
 }
 .product-status-text .MuiFormControlLabel-label{
     font-family: Montserrat;
@@ -82,6 +84,7 @@
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 0.2px;
+    padding-right: 8px
 }
 .text-light{
     color:rgba(18, 23, 21, 0.5);
@@ -89,8 +92,14 @@
 .text-dark{
     color:rgba(18, 23, 21);
 }
+.price-info{
+    display: flex;
+    word-break: break-all;
+}
 .description{
     margin-top: 5px;
+    display: flex;
+    word-break: break-word;
 }
 
 
